--- a/.github/workflows/main_cody-backend.yml
+++ b/.github/workflows/main_cody-backend.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Java version
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: 'java21'
           distribution: 'microsoft'
 
       - name: Build with Maven
@@ -49,9 +49,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_306FC708AECC4161BEFF160F0267F5B5 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FD081B7963314C18B3C49190EA41E235 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_99C4BD02EAFF4C9588CBC587FC3F57F5 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_707A430A55CD4FBCAC671FB35A7DE03D }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C7D64C11A03F460192EF2914F49EB3EF }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_AFC4386B95254DCD99EA47CB20F9C60B }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
